--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -259,26 +259,22 @@
                                 <rect key="frame" x="0.0" y="272" width="320" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <connections>
-                                    <segue destination="tMg-FT-HbE" kind="embed" id="RUZ-Xw-NVd"/>
-                                </connections>
                             </containerView>
                             <containerView contentMode="scaleToFill" id="MYH-zI-WdJ">
                                 <rect key="frame" x="0.0" y="368" width="320" height="180"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <connections>
-                                    <segue destination="2ls-d1-09R" kind="embed" id="H7X-IU-S2u"/>
-                                </connections>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="averagesContainerView" destination="0xo-Xa-pcg" id="IZJ-fb-JtL"/>
                         <outlet property="durationLabel" destination="BEi-4X-Lhy" id="sbc-Ij-Z3J"/>
                         <outlet property="durationTitleLabel" destination="zd8-8J-Isd" id="7RL-lT-WXF"/>
                         <outlet property="frequencyLabel" destination="37G-V5-0Jc" id="7ls-gB-Uf3"/>
                         <outlet property="frequencyTitleLabel" destination="OR3-nF-D60" id="Y6h-RM-xiV"/>
+                        <outlet property="historyContainerView" destination="MYH-zI-WdJ" id="N64-tb-a2V"/>
                         <outlet property="intensityLabel" destination="HNB-kZ-NCc" id="1Lw-Uo-C9h"/>
                         <outlet property="intensityTitleLabel" destination="M69-PE-W5a" id="xPZ-sJ-l6z"/>
                         <outlet property="lastContractionContainerView" destination="B3i-zO-6Q7" id="HV6-UQ-ikr"/>
@@ -300,7 +296,7 @@
         <!--Averages View Controller-->
         <scene sceneID="nPn-pg-hfA">
             <objects>
-                <viewController id="tMg-FT-HbE" customClass="BCAveragesViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AveragesController" id="tMg-FT-HbE" customClass="BCAveragesViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9Hc-eD-ZNJ">
                         <rect key="frame" x="0.0" y="0.0" width="960" height="80"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -510,9 +506,9 @@
         <!--History View Controller-->
         <scene sceneID="UIm-IZ-qPZ">
             <objects>
-                <viewController id="2ls-d1-09R" customClass="BCHistoryViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HistoryController" id="2ls-d1-09R" customClass="BCHistoryViewController" sceneMemberID="viewController">
                     <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="fBf-4M-VjT">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="ffW-f4-RNY">
@@ -570,7 +566,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="54" sectionHeaderHeight="22" sectionFooterHeight="22" id="Yrp-bY-iza">
-                                <rect key="frame" x="0.0" y="41" width="197" height="139"/>
+                                <rect key="frame" x="0.0" y="41" width="197" height="507"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -625,7 +621,7 @@
                                 </connections>
                             </tableView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="54" sectionHeaderHeight="22" sectionFooterHeight="22" id="Sla-Gh-2o1">
-                                <rect key="frame" x="197" y="41" width="123" height="139"/>
+                                <rect key="frame" x="197" y="41" width="123" height="507"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -661,7 +657,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" id="fbE-AQ-ijK">
-                                                    <rect key="frame" x="-67" y="47" width="197" height="1"/>
+                                                    <rect key="frame" x="0.0" y="53" width="123" height="1"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" red="0.88235294119999996" green="0.88235294119999996" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
                                                 </view>
@@ -705,84 +701,6 @@
         <image name="orange-trash.png" width="22" height="30"/>
         <image name="start-button.png" width="61" height="81"/>
     </resources>
-    <classes>
-        <class className="BCAveragesViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCAveragesViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="averageLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="averagesScrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="fifteenMinuteDuration" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fifteenMinuteFrequency" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fifteenMinuteIntensity" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fifteenMinuteNumberLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="minuteNumberScrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="oneHourDuration" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="oneHourFrequency" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="oneHourIntensity" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="pageControl" candidateClass="BCPageControl"/>
-                <relationship kind="outlet" name="sixtyMinuteNumberLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thirtyMinuteDuration" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thirtyMinuteFrequency" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thirtyMinuteIntensity" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thirtyMinuteNumberLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BCBaseViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCBaseViewController.h"/>
-        </class>
-        <class className="BCContractionCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BCFrequencyCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCFrequencyCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BCHistoryViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCHistoryViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="contractionHistoryLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="contractionTableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="durationHeaderLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="frequencyHeaderLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="frequencyTableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="headerContainerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="intensityHeaderLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BCPageControl" superclassName="UIPageControl">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCPageControl.h"/>
-        </class>
-        <class className="BCRootViewController" superclassName="BCBaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCRootViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="deleteLastContraction:"/>
-                <relationship kind="action" name="editLastContraction:"/>
-                <relationship kind="action" name="lastContractionIntensityPressed:" candidateClass="UIButton"/>
-                <relationship kind="action" name="startStopContraction:"/>
-                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="frequencyTitleLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="intensityTitleLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="lastContractionContainerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="lastContractionHandle" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="lastContractionIntensityContainerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="lastContractionLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="lastContractionSlideOut" candidateClass="UIView"/>
-                <relationship kind="outlet" name="nextContractionEstimateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="startStopButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="timerBackgroundView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="timerLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
